<package>
  <!-- Package Metadata -->
  <name>harrt_ros</name>
  <maintainer email="daqing.yi@byu.edu">Walter</maintainer>
  <description>
    ROS node for HARRT*
  </description>
  <version>0.0.5</version>
  <license>BSD</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_depend>tbpp</build_depend>
  <run_depend>tbpp</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
